# GovernmentProject

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/ap_civic_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/app/: __init__.py  config.py  dependencies.py  logging_config.py  main.py  metrics.py
apps/api/app/agents/: graph.py  state.py
apps/api/app/agents/nodes/: collect_latest.py  failure.py  greeting.py  intent_router.py  response_composer.py  scheme_qa.py  scope_guard.py
apps/api/app/db/: factory.py  firestore.py  inmemory.py  repository.py
apps/api/app/models/: schemas.py
apps/api/app/routers/: __init__.py  admin.py  public.py  system.py
apps/api/app/security/: auth.py  rate_limit.py  ssrf.py
apps/api/app/services/: agent_orchestrator.py  anomalies.py  chat.py  classifier.py  crawler.py  embeddings.py  extractor.py  ingestion.py  intent_classifier.py  job_orchestrator.py  retrieval.py  structurer.py  verifier.py  versioning.py
apps/api/app/tasks/: scheduler.py
apps/api/data/: faiss_meta.json
apps/api/tests/: test_admin_open_source_pull.py  test_agent_orchestration_chat.py  test_approval_gate.py  test_chat_safe_failure.py  test_ingestion_progress.py  test_intent_classifier.py  test_ssrf.py  test_verifier.py
apps/web/: .eslintrc.json  Dockerfile  components.json  next.config.mjs  package.json  tsconfig.json  (+2 more)
data/: faiss.index  faiss_meta.json
docs/: api.md  architecture.md  prompts.md  runbook.md
infra/: docker-compose.yml
(+39 files in other folders)
