[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ap-civic-api"
version = "1.0.0"
description = "AI-first civic intelligence API for Andhra Pradesh student welfare schemes"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.2.2",
  "pdfplumber>=0.11.4",
  "apscheduler>=3.10.4",
  "openai>=1.40.0",
  "langchain>=0.3.0",
  "langgraph>=0.2.0",
  "google-cloud-firestore>=2.17.0",
  "google-cloud-storage>=2.18.0",
  "firebase-admin>=6.5.0",
  "faiss-cpu>=1.8.0.post1",
  "numpy>=1.26.4",
  "prometheus-client>=0.20.0",
  "python-dotenv>=1.0.1",
  "tenacity>=9.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.8",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.1",
  "mypy>=1.11.1"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B008", "UP006", "UP017", "UP035"]

